<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:backgroundTintMode="src_over"
    tools:context=".AddDelivery">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/clr_toolbar"
        android:isScrollContainer="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/menu" />

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"

        android:text="@string/tv_toolbar"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_edit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginBottom="8dp"
        android:background="#07FFFFFF"
        android:text="@string/btn_edit"
        android:textSize="12sp"
        app:backgroundTint="#FDFDFD"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_newAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#07FFFFFF"
        android:text="@string/btn_delete"
        android:textSize="12sp"
        app:backgroundTint="#FDFDFD"
        app:icon="@android:drawable/ic_menu_delete"
        app:iconTint="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/btn_edit" />

    <Button
        android:id="@+id/btn_newAddress"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:text="@string/btn_newAddress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/design_default_color_secondary"
        app:icon="@drawable/addbutton"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/tv_charges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_charges"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et_ammount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_newAddress" />

    <EditText
        android:id="@+id/et_ammount"
        android:layout_width="102dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/et_amount"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_charges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_charges" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_continue"
        android:textColor="@color/black"
        app:backgroundTint="@color/design_default_color_secondary"
        app:iconTint="@color/design_default_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ammount"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="282dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <TextView
            android:id="@+id/tv_dAddress"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_dAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv2fname"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tvfname" />

        <TextView
            android:id="@+id/tv2sname"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tv1_sName" />

        <TextView
            android:id="@+id/tv2addline1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tv1_address1" />

        <TextView
            android:id="@+id/tv2addline2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tv2_address2" />

        <TextView
            android:id="@+id/tv2city"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tvcity" />

        <TextView
            android:id="@+id/tv2region"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tvregion" />

        <TextView
            android:id="@+id/tv2mobile"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/tvmobile" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>